--- a/UJCSystem/ITJakub.Web.Hub/Areas/Editions/Views/Editions/List.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Editions/Views/Editions/List.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Scalesoft.Localization.AspNetCore
 @inject ILocalizationService Localizer
+@inject IFileVersionProvider FileVersionProvider
 
 @section styles{
     <link asp-append-version="true" href="~/Areas/Editions/css/itjakub.editions.css" rel="stylesheet" />
@@ -12,5 +13,7 @@
 @{
     ViewBag.Title = Localizer.Translate("EditionsList", "Editions");
 }
+
+<div id="bibliography-configuration-url" data-url="@FileVersionProvider.AddFileVersionToPath(Context.Request.PathBase, Url.Content("~/Areas/Editions/content/BibliographyPlugin/list_configuration.json"))"></div>
 
 @await Html.PartialAsync("_BibliographySearch")
