--- a/UJCSystem/ITJakub.Web.Hub/Views/Shared/_Layout.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
 
 @inject ILocalizationService Localizer
 @inject IOptions<PortalOption> PortalConfig
+@inject IFileVersionProvider FileVersionProvider
 
 <!DOCTYPE html>
 <html>
@@ -76,6 +77,7 @@
     <div id="permissions-div" class="hidden" data-is-authenticated="@User.Identity.IsAuthenticated" data-roles="@if (User.HasPermission(VokabularPermissionNames.EditLemmatization))
                                                                                                     {@Html.Raw("EditLemmatization")
                                                                                                     } "></div>
+    <div id="bibliography-configuration-default-url" data-url="@FileVersionProvider.AddFileVersionToPath(Context.Request.PathBase, Url.Content("~/content/BibliographyConfiguration/configuration.json"))"></div>
     <div class="page-body-content">
 
         <script asp-append-version="true" src="~/lib/jquery/dist/jquery.min.js"></script>
@@ -156,7 +158,7 @@
                 @{
                     string vokabularStartedNew = FooterHelper.VokabularStartedLocalized(Localizer, new DateTime(2015, 1, 1));
                 }
-                
+
                 @Localizer.TranslateFormat("FooterText", "layout", LocTranslationSource.File, vokabularStartedNew)
             </div>
             <div class="footer-logos">
