--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_ChapterRow.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_ChapterRow.cshtml
@@ -4,7 +4,7 @@
 @inject ILocalizationService Localizer
 
 <div class="chapter-container">
-    <div class="chapter-row" data-chapter-id="@Model.Chapter.Id" data-beginning-page-id="@Model.Chapter.BeginningPageId" data-position="@Model.Chapter.Position" data-level="@Model.LevelOfHierarchy">
+    <div class="chapter-row" data-chapter-id="@Model.Chapter.Id" data-beginning-page-id="@Model.Chapter.BeginningPageId" data-level="@Model.LevelOfHierarchy">
         <div class="ridics-checkbox" style="margin-left: @(Model.LevelOfHierarchy)em">
             <label>
                 <input type="checkbox" class="selection-checkbox" />
