Chapter editor - add discard button

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_ChapterRow.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_ChapterRow.cshtml
@@ -35,8 +35,11 @@
                     }
                 }
             </select>
-            <a class="edit-chapter btn btn-sm btn-default" title="@Localizer.Translate("EditChapterName", "RidicsProject")">
+            <a class="edit-chapter btn btn-sm btn-default" title="@Localizer.Translate("EditChapter", "RidicsProject")">
                 <i class="fa fa-pencil"></i>
+            </a>
+            <a class="discard-chapter-changes btn btn-sm btn-default hide" title="@Localizer.Translate("DiscardChapterChanges", "RidicsProject")">
+                <i class="fa fa-times"></i>
             </a>
             <a class="remove-chapter btn btn-sm btn-default" title="@Localizer.Translate("DeleteChapter", "RidicsProject")">
                 <i class="fa fa-trash"></i>
