--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_ChapterEditor.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_ChapterEditor.cshtml
@@ -27,6 +27,7 @@
                         </div>
                         <div class="col-xs-12 col-md-8 panel-buttons text-right">
                             <button type="button" class="btn btn-default form-control" id="project-chapters-edit-button">@Localizer.Translate("CreateChapter", "Admin")</button>
+                            <button type="button" class="btn btn-default form-control" id="generateChapters">@Localizer.Translate("GenerateChapters", "Admin")</button>
                         </div>
                     </div>
                 </div>
