--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ridics.permissions.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ridics.permissions.less
@@ -131,6 +131,17 @@
     }
 }
 
+#addProjectPermissionToRoleDialog .content,
+.project-permission-section { 
+     .ridics-checkbox {
+         padding: 0.2em 0.8em;
+     }
+    
+    button {
+        margin-left: 0.8em;
+    }
+}
+
 .modal {
     .content,
     .form-horizontal {
@@ -163,6 +174,16 @@
                 font-weight: bold;
             }
         }
+    }
+}
+
+#addProjectPermissionToRoleDialog {
+    h5 {
+        font-size: 16px;
+    }
+
+    .panel {
+        margin-bottom: 0;
     }
 }
 
