--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1420,8 +1420,8 @@ table {
             min-width: 90px;
             text-align: right;
 
-            a {
-                margin-bottom: 0;
+            button {
+                margin: 0;
             }
         }
 
