Improve layout in dialog for assigning permissions to project

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ridics.permissions.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ridics.permissions.less
@@ -182,8 +182,8 @@
         font-size: 16px;
     }
 
-    .panel {
-        margin-bottom: 0;
+    fieldset > div {
+        margin-left: 0.5rem;
     }
 }
 
