--- a/UJCSystem/ITJakub.Web.Hub/Views/Permission/ProjectPermission.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Permission/ProjectPermission.cshtml
@@ -101,23 +101,24 @@
                 <h5 id="specificProjectName" class="modal-title"></h5>
             </div>
             <div class="modal-body">
-                <div class="permission-search">
+                <div class="form-group">
+                    <label for="roleSearchInput">@Localizer.Translate("SearchGroupLabel", "Permission", LocTranslationSource.File)</label>
                     <input type="text" class="form-control role-search-input" id="roleSearchInput" placeholder="@Localizer.Translate("SearchGroup", "Permission", LocTranslationSource.File)" />
                 </div>
 
-                <div class="content">
-                    <div class="item-details">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <span id="selectedRole">@Localizer.Translate("RoleIsNotSelected", "PermissionJs")</span>
-                            </div>
-                            <div class="panel-body">
-                                @await Html.PartialAsync("Widget/_ProjectPermissionsWidget", new PermissionDataContract())
-                            </div>
-                        </div>
-                    </div>
-                    <div id="addProjectToRoleError"></div>
+                <div class="form-group">
+                    <label for="selectedRole">@Localizer.Translate("SelectedGroup", "Permission")</label>
+                    <p class="form-control-static" id="selectedRole">@Localizer.Translate("RoleIsNotSelected", "PermissionJs")</p>
                 </div>
+                
+                <fieldset class="form-group">
+                    <label>@Localizer.Translate("Permissions", "Permission")</label>
+                    <div>
+                        @await Html.PartialAsync("Widget/_ProjectPermissionsWidget", new PermissionDataContract())
+                    </div>
+                </fieldset>
+
+                <div id="addProjectToRoleError"></div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">@Localizer.Translate("Close", "Permission", LocTranslationSource.File)</button>
