Add missing title to new button for discarding changes in page editor

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_PageTable.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_PageTable.cshtml
@@ -35,7 +35,7 @@
                             <button type="button"  class="edit-page btn btn-sm btn-default" title="@Localizer.Translate("EditPageName", "RidicsProject")">
                                 <i class="fa fa-pencil"></i>
                             </button>
-                            <button type="button" class="discard-changes btn btn-sm btn-default hide">
+                            <button type="button" class="discard-changes btn btn-sm btn-default hide" title="@Localizer.Translate("DiscardChanges", "RidicsProject")">
                                 <i class="fa fa-times"></i>
                             </button>
                             <button type="button" class="remove-page btn btn-sm btn-default" title="@Localizer.Translate("DeletePage", "RidicsProject")">
