--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_ChapterEditor.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_ChapterEditor.cshtml
@@ -136,6 +136,7 @@
 </div>
 
 <div id="chapterTemplate" class="hide">
+    @*chapter-container has duplicate definition in _ChapterRow.cshtml*@
     <div class="chapter-container">
         <div class="chapter-row">
             <div class="ridics-checkbox">
