Cancel book filtering button for Dropdown Select

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/Plugins/ITJakub.DropdownSelect.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/Plugins/ITJakub.DropdownSelect.less
@@ -130,6 +130,13 @@
     padding-top: 3px;
     display: inline-block;
     float: left;
-    margin-right: 2rem;
+    margin-right: .5rem;
     margin-bottom: .3rem;
+}
+
+.dropdown-cancel {
+    padding-top: 3px;
+    display: inline-block;
+    float: left;
+    margin-right: 2rem;
 }
