Fix selectbox in snapshot publishing

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1544,6 +1544,10 @@ table {
                 .bootstrap-select {
                     max-width: 5em;
 
+                    .inner {
+                        max-height: 75vh;
+                    }
+                    
                     .dropdown-menu {
                         .active {
                             a,
