Create publication view - add back button

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Publication/PublicationsNew.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Publication/PublicationsNew.cshtml
@@ -21,6 +21,9 @@
 <div class="content-container">
     <div class="snapshot-layout">
         <div id="new-snapshot-container">
+            <div class="col-xs-12 back-button">
+                <a asp-action="Project" asp-controller="Project" asp-route-id="@Model.ProjectId" class="btn btn-default">@Localizer.Translate("Back")</a>
+            </div>
             <form id="createSnapshot" asp-controller="Publication" asp-action="NewSnapshot" method="post">
                 <div asp-validation-summary="All" class="alert alert-danger"></div>
                 <input type="hidden" asp-for="ProjectId" />
