--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -92,6 +92,10 @@
 
 .project-layout,
 .snapshot-layout {
+    .back-button {
+        text-align: right;
+    }
+    
     .left-menu, .vertical-splitter, .vertical-splitter-control, .content {
         display: table-cell;
     }
