--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Publications.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Publications.cshtml
@@ -8,7 +8,7 @@
         <h3>@Localizer.Translate("PublishedSnapshots", "Admin")</h3>
 
         <div class="row">
-            <div class="col-sm-offset-6 col-sm-6 col-lg-offset-8 col-lg-4">
+            <div class="col-sm-offset-2 col-sm-10 col-md-offset-5 col-md-7 col-lg-offset-7 col-lg-5">
                 <form asp-action="SnapshotList" asp-controller="Project" method="get" class="snapshot-search-form search-form form-inline">
                     <div class="form-group">
                         <div class="search-input">
