Text editor - respond to comment area move after comments

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1188,6 +1188,10 @@ table {
                                 background-color: @odd-comment-area-background-color;
                             }
                         }
+
+                        .respond-to-comment-textarea {
+                            margin-top: 5px;
+                        }
                     }
 
                     .composition-area {
