Highlight selected menu item without submenu in root level

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ITJakub.PluginMenu.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ITJakub.PluginMenu.less
@@ -31,7 +31,7 @@
     position: relative;
 }
 
-#main-plugins-menu .has-sub.active {
+#main-plugins-menu .active {
     background-color: @menu-active-background-color;
 }
 
