Fixed duplicate element id in the chapter editor

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_ChapterEditor.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_ChapterEditor.cshtml
@@ -1,5 +1,4 @@
-﻿@using ITJakub.Web.Hub.Areas.Admin.Models
-@using Scalesoft.Localization.AspNetCore
+﻿@using Scalesoft.Localization.AspNetCore
 @model ITJakub.Web.Hub.Areas.Admin.Models.ChapterEditorViewModel
 @inject ILocalizationService Localizer
 
@@ -54,7 +53,7 @@
                 </div>
             </div>
         </div>
-        <div id="page-detail" class="hide col-xs-12 col-md-5">
+        <div id="chaptersPageDetail" class="hide col-xs-12 col-md-5">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <div class="panel-title">
