Fixed localization in the chapter editor

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_ChapterEditor.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_ChapterEditor.cshtml
@@ -35,10 +35,10 @@
                         @await Html.PartialAsync("Work/SubView/_ChapterTable", Model)
                     </div>
                     <div class="panel-bottom-buttons text-right">
-                        <button type="button" class="btn btn-default move-chapter-left" title="@Localizer.Translate("ShiftChapterUp", "RidicsProject")">
+                        <button type="button" class="btn btn-default move-chapter-left" title="@Localizer.Translate("ExcludeChapterFromTheSubCategory", "RidicsProject")">
                             <span class="glyphicon glyphicon-arrow-left"></span>
                         </button>
-                        <button type="button" class="btn btn-default move-chapter-right" title="@Localizer.Translate("ShiftChapterDown", "RidicsProject")">
+                        <button type="button" class="btn btn-default move-chapter-right" title="@Localizer.Translate("IncludeChapterToTheSubCategory", "RidicsProject")">
                             <span class="glyphicon glyphicon-arrow-right"></span>
                         </button>
                         <label for="chapterMoveDistance">@Localizer.Translate("Shift", "RidicsProject")</label>
