Fix ui problems in the chapter editor

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_ChapterEditor.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_ChapterEditor.cshtml
@@ -41,7 +41,7 @@
                         <button type="button" class="btn btn-default move-chapter-right" title="@Localizer.Translate("IncludeChapterToTheSubCategory", "RidicsProject")">
                             <span class="glyphicon glyphicon-arrow-right"></span>
                         </button>
-                        <label for="chapterMoveDistance">@Localizer.Translate("Shift", "RidicsProject")</label>
+                        <label for="chapterMoveDistance" class="chapter-move-distance-label">@Localizer.Translate("Shift", "RidicsProject")</label>
                         <input type="number" id="chapterMoveDistance" class="chapter-move-distance form-control" value="1" min="1" max="@Model.Chapters.Count"/>
                         <button type="button" class="btn btn-default move-chapter-up" title="@Localizer.Translate("ShiftChapterUp", "RidicsProject")">
                             <span class="glyphicon glyphicon-arrow-up"></span>
