--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1625,6 +1625,13 @@ table {
     }
 }
 
+.project-chapter-list {
+    .body-content {
+        flex-wrap: nowrap;
+        flex-direction: column;
+    }
+}
+
 .chapter-move-distance,
 .page-move-distance {
     max-width: 5em;
@@ -1633,6 +1640,9 @@ table {
     margin-left: 0.5em;
 }
 
+.chapter-move-distance-label {
+    margin-left: 2em;
+}
 
 .editor-toolbar,
 .CodeMirror {
