--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -93,7 +93,8 @@
 .project-layout,
 .snapshot-layout {
     .back-button {
-        text-align: right;
+        margin-top: -1rem;
+        margin-bottom: 0.7rem;
     }
     
     .left-menu, .vertical-splitter, .vertical-splitter-control, .content {
