Snapshot editor - fix selectbox height

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1554,7 +1554,7 @@ table {
                     max-width: 5em;
 
                     .inner {
-                        max-height: 75vh;
+                        max-height: 35vh !important; // override max-height set by bootstrap-select
                     }
                     
                     .dropdown-menu {
