Chapter editor - fix duplicate element id (alert)

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_ChapterEditor.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_ChapterEditor.cshtml
@@ -4,7 +4,7 @@
 
 <div class="project-chapter-list">
     <div class="row resource-tab-row-fix">
-        <div id="unsavedChanges" class="col-xs-12 hide">
+        <div id="chaptersUnsavedChanges" class="col-xs-12 hide">
             <div class="alert alert-warning">
                 <div class="row">
                     <div class="col-xs-8">@Localizer.Translate("UnsavedChanges", "RidicsProject")</div>
