addapting colors depending on main theme of the page

--- a/UJCSystem/ITJakub.Web.Hub/Views/Shared/_Layout.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
     <link asp-append-version="true" href="~/lib/bootstrap-colorpicker-plus/dist/css/bootstrap-colorpicker-plus.min.css" rel="stylesheet" />
     <link asp-append-version="true" href="~/lib/s-pagination/dist/pagination.css" rel="stylesheet" />
     <link asp-append-version="true" href="~/css/ITJakubStyle.css" rel="stylesheet" />
-    <link asp-append-version="true" href="~/lib/loading-visualization/dist/main.css" rel="stylesheet" />
+    <link asp-append-version="true" href="~/css/lib.loading-visualization.css" rel="stylesheet" />
     @RenderSection("styles", false)
     <partial name="_AutoLogin" />
 </head>
