--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/List.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/List.cshtml
@@ -1,6 +1,7 @@
 ﻿@model ITJakub.Web.Hub.Areas.Admin.Models.ProjectListViewModel
 @using ITJakub.Web.Hub.Core
 @using Scalesoft.Localization.AspNetCore
+@using Vokabular.Shared.DataContracts.Types
 @inject ILocalizationService Localizer
 
 @{
@@ -66,9 +67,25 @@
             <div class="modal-body">
                 <div class="form-horizontal">
                     <div class="form-group">
-                        <label for="new-project-name" class="col-md-3 control-label">@Localizer.Translate("NewProjectName", "Admin")</label>
-                        <div class="col-md-8">
+                        <label for="new-project-name" class="col-md-3 col-lg-4 control-label">@Localizer.Translate("NewProjectName", "Admin")</label>
+                        <div class="col-md-8 col-lg-7">
                             <input class="form-control" id="new-project-name" type="text" maxlength="@Projects.MaxNameLength">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-md-3 col-lg-4 control-label">@Localizer.Translate("CreateForumInModules", "Admin")</label>
+                        <div class="col-md-8 col-lg-7">
+                            @{
+                                foreach (var bookType in Model.AvailableBookTypes)
+                                {
+                                    <div class="checkbox">
+                                        <label>
+                                            <input type="checkbox" name="bookType" value="@bookType.ToString()" data-book-type="@bookType.ToString()" @(bookType == BookTypeEnumContract.Edition ? "checked" : "")/>
+                                            @Localizer.Translate(bookType.ToString(), "Admin")
+                                        </label>
+                                    </div>
+                                }
+                            }
                         </div>
                     </div>
                 </div>
