Improve loading screen in image and text editors

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Images.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Images.cshtml
@@ -2,7 +2,7 @@
 @using Scalesoft.Localization.AspNetCore
 @inject ILocalizationService Localization
 
-<div id="project-resource-images">
+<div id="project-resource-images" class="hide">
     <div class="text-editor-page-slider">
         <div class="ui-slider-handle page-slider-handle">
             <div class="slider-tooltip">
