--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Preview.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Preview.cshtml
@@ -4,7 +4,7 @@
 
 <div id="userInfo" data-first-name="@User.GetFirstName()" data-last-name="@User.GetLastName()" class="hide"></div>
 
-<div id="project-resource-preview">
+<div id="project-resource-preview" class="hide">
     <div id="page-slider" class="text-editor-page-slider">
         <div class="ui-slider-handle page-slider-handle">
             <div class="slider-tooltip">
