--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/List.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/List.cshtml
@@ -1,4 +1,4 @@
-﻿@model ITJakub.Web.Hub.Areas.Admin.Models.ListViewModel<ITJakub.Web.Hub.Areas.Admin.Models.ProjectItemViewModel>
+﻿@model ITJakub.Web.Hub.Areas.Admin.Models.ProjectListViewModel
 @using ITJakub.Web.Hub.Core
 @using Scalesoft.Localization.AspNetCore
 @using Vokabular.Shared.DataContracts.Types
@@ -51,7 +51,7 @@
                                             <i class="fa fa-plus"></i>
                                         </div>
                                         <div class="search-input">
-                                            <input class="form-control search-value" name="search" placeholder=" " value="@Model.SearchQuery" />
+                                            <input class="form-control search-value" name="search" placeholder=" " value="@Model.Projects.SearchQuery" />
                                             <i class="fa fa-close reset-search-button"></i>
                                         </div>
                                         <div class="search-button">
@@ -66,7 +66,7 @@
                     </div>
                     <div class="panel-body">
                         <div id="projectListContainer" class="list-container selectable">
-                            @await Html.PartialAsync("_ProjectListContent", Model)
+                            @await Html.PartialAsync("_ProjectListContent", Model.Projects)
                         </div>
                         <div id="projectPagination" class="text-center"></div>
                     </div>
